build/production/api-mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-mqtt
  namespace: production
spec:
  selector:
    matchLabels:
      app: api-mqtt
  template:
    metadata:
      labels:
        app: api-mqtt
    spec:
      containers:
        - name: api-mqtt
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/api_production:latest
          args: ["npm", "run", "start:mqtt"]
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "500m"
              memory: "300Mi"
            requests:
              cpu: "500m"
              memory: "300Mi"
