build/production/api-mqtt/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    nginx.ingress.kubernetes.io/enable-cors: "flase"
  name: api-mqtt-ingress
  namespace: production
  labels:
      app: "api-mqtt"
spec:
  rules:
  - host: mqtt.rfcx.org
    http:
      paths:
      - backend:
          serviceName: api-mqtt-service
          servicePort: 80
